# cpid

./: .gitignore  .gitmodules  Cargo.toml  README.adoc  build.rs
scripts/: cpid-index-jdk
src/: cli.rs  indexes.rs  jdk.rs  lib.rs  main.rs  project.rs  proto.rs  serve.rs
tests/: integ_serve.rs
vim-cpid/test-app/: pom.xml  pom.xml.classpath-cache
vim-cpid/test-app/src/main/java/org/sidejump/cpid/: App.java  OtherThings.java  Thing.java
vim-cpid/test-app/src/test/java/org/sidejump/cpid/: AppTest.java
