[package]
name = "cpid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.60"
regex = "1.6.0"
serde = "1.0.143"
serde_derive = "1.0.143"
serde_json = "1.0.83"
sled = "0.34.7"
xdg = "2.4.1"
zip = "0.6.2"
