[package]
name = "cpid"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "*"

[dependencies]
anyhow = "1.0.60"
regex = "1.6.0"
serde = "1.0.143"
serde_derive = "1.0.143"
serde_json = "1.0.83"
sled = "0.34.7"
tree-sitter = "0.20.8"
walkdir = "2"
xdg = "2.4.1"
zip = "0.6.2"

[package.metadata.deb]
maintainer = "Drew P. Vogel <dvogel@sidejump.org>"
copyright = "2022, Drew P. Vogel"
assets = [
    ["target/release/cpid", "usr/bin/", "755"],
    ["scripts/cpid-index-jdk", "usr/bin/", "755"],
    ]
